k3s/example/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP # You can use LoadBalancer since MetalLB will handle and allocate external ip.
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
