k3s/example/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # cert-manager.io/cluster-issuer: vault-k8s-ci # Local dev
    # cert-manager.io/cluster-issuer: letsencrypt-production  # Production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - nginx.poddle.uz
      secretName: nginx-tls-secret
  rules:
    - host: nginx.poddle.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
